# python-django

day00/ex00/: myawesomescript.sh
day00/ex01/: cv.html
day00/ex02/: form.html
day00/ex05/: index.html
day01/ex00/: var.py
day01/ex01/: numbers.py
day01/ex02/: var_to_dict.py
day01/ex03/: capital_city.py
day01/ex04/: state.py
day01/ex05/: all_in.py
day01/ex06/: my_sort.py
day02/ex00/: myCV.template  render.py  settings.py
day02/ex01/: intern.py
day02/ex02/: beverages.py
day02/ex03/: machine.py
day02/ex04/: elem.py
day02/ex05/: elements.py
day02/ex06/: Page.py  elements.py
day03/ex00/: geohashing.py
day03/ex01/: install.py
day05/: install.sh  requirements.txt
day05/d05/: settings.py  urls.py
day05/ex00/: create_table.py  urls.py  views.py
day05/ex00/templates/ex00/: index.html
day05/ex01/: models.py
day05/ex02/: urls.py  views.py
day05/ex03/: models.py  urls.py  views.py
day07/d07/: settings.py  urls.py
day07/ex00/: admin.py  models.py  urls.py  views.py
day07/ex00/fixtures/: article.json  users.json
day07/ex00/templates/ex00/: articles.html  (+4 more)
day08/: requirements.txt  website.conf
day08/d08/: settings.py  urls.py
day08/django-d08/: MANIFEST.in  setup.cfg
day08/django-d08/django_ex00.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
day08/django-d08/ex00/: models.py
day08/django-d08/ex00/templates/ex00/: my_images.html
day08/ex00/: urls.py  views.py
day09/: requirements.txt
day09/account/: models.py  urls.py  views.py
day09/chat/: admin.py  models.py  urls.py  views.py
day09/d09/: settings.py  urls.py
(+4 files in other folders)
