[metadata]
name = django-ex00
version = 0.1
description = A Django app.
long_description = file: README.rst
url =
author = vchechai
author_email = volchey07@gmail.com
license = CC BY-SA 4.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires=asgiref==3.2.3
                 Django==3.0.3
                 psycopg2-binary==2.8.4
                 pytz==2019.3
                 sqlparse==0.3.0
                 Pillow==7.0.0